<resources>
    <string name="app_name">Вместе</string>
    <string name="home_menu_label">Домой</string>
    <string name="favourites_menu_label">Избранное</string>
    <string name="note_menu_label">Новая заметка</string>
    <string name="chat_menu_label">Чат</string>
    <string name="profile_menu_label">Профиль</string>
    <string name="error_retry">Повторить</string>
    <string name="text_empty">Пусто</string>
    <string name="error_no_network_title">Нет подключения к сети</string>
    <string name="error_no_network_description">Проверьте мобильное соединение или подключение Wi-Fi</string>
    <string name="error_something_wrong_title">Ой-ой…</string>
    <string name="error_something_wrong_description">Что-то пошло не по плану</string>
    <string name="login_title">Вход</string>
    <string name="login_message">Пожалуйста, войдите для продолжения</string>
    <string name="phone_hint">Номер телефона</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button_label">Войти</string>
    <string name="registration_button_label">Регистрация</string>
    <string name="button_back_to_login_label">Войти с учетной записью</string>
    <string name="name_hint">Имя</string>
    <string name="surname_hint">Фамилия</string>
    <string name="registration_title">Регистрация</string>
    <string name="registration_message">Пожалуйста, введите данные для новой учетной записи</string>
    <string name="profile_text_title">Вы зашли под номером\n</string>
    <string name="profile_title">Профиль</string>
    <string name="profile_button">Выйти</string>
    <string name="tab_local">Локально</string>
    <string name="tab_community">Сообщество</string>
    <string name="note_title_hint">Название</string>
    <string name="note_content_hint">Описание заметки</string>
    <string name="new_note_title">Новая заметка</string>
    <string name="create_note_text">Готово</string>
    <string name="add_title">Что добавить?</string>
    <string name="add_text">Текст</string>
    <string name="add_image">Ссылка на фото</string>
    <string name="failed_to_load_image">Не удалось загрузить картинку</string>
    <string name="url_hint">http://…</string>
    <string name="upload_image_button_text">Добавить</string>
    <string name="all_items_label">Все</string>
    <string name="community_notes_label">Заметки сообщества</string>
    <string name="local_notes_label">Ваши заметки</string>
    <string name="last_courses_label">Последние курсы</string>
    <string name="courses_label">Все курсы</string>
    <string name="show_chat_action">Показать чат</string>
    <string name="chat_state">Нет новых</string>
    <string name="note_title">Заметка</string>
    <string name="note_subtitle">Текст</string>
    <string name="course_status_title">Статус:</string>
    <string name="course_status_text">Редактировать</string>
    <string name="course_topics_subtitle">Темы</string>
    <string name="course_content_subtitle">Занятие</string>
    <string name="next_lesson_title">Ближайшее занятие</string>
    <string name="courses_completed_title">Пройдено</string>
    <string name="courses_remaining_title">Осталось</string>
    <string name="hint_search">Поиск</string>
    <string name="favourites_title">Избранное</string>

</resources>