<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/home_menu_label" />
    <item
        android:id="@+id/favouritesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_menu_favourites"
        android:title="@string/favourites_menu_label" />
    <item
        android:id="@+id/noteFragment"
        android:enabled="true"
        android:icon="@drawable/ic_menu_note"
        android:title="@string/note_menu_label" />
    <item
        android:id="@+id/chatFragment"
        android:enabled="true"
        android:icon="@drawable/ic_menu_chat"
        android:title="@string/chat_menu_label" />
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/profile_menu_label" />
</menu>