<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:paddingVertical="8dp"
        android:text="@string/add_title"
        android:textColor="@color/dark_gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="?selectableItemBackground"
        android:drawablePadding="12dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_vertical"
        android:paddingVertical="8dp"
        android:text="@string/add_text"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:drawableLeftCompat="@drawable/ic_text" />

    <TextView
        android:id="@+id/textViewImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:background="?selectableItemBackground"
        android:drawablePadding="12dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_vertical"
        android:paddingVertical="8dp"
        android:text="@string/add_image"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:drawableLeftCompat="@drawable/ic_image" />

</LinearLayout>