<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:contentDescription="@null"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/registration_title"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/roboto"
                android:text="@string/registration_message"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:autofillHints="name"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@color/dark_gray_20_transparent"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/name_hint"
                android:inputType="textPersonName|textCapSentences"
                android:padding="12dp"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray" />

            <EditText
                android:id="@+id/editTextSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:autofillHints="surname"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@color/dark_gray_20_transparent"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/surname_hint"
                android:inputType="textPersonName|textCapSentences"
                android:padding="12dp"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:autofillHints="phone"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@color/dark_gray_20_transparent"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@color/dark_gray_20_transparent"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:fontFamily="@font/roboto_medium"
            android:foreground="?selectableItemBackground"
            android:text="@string/registration_button_label"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:backgroundTint="@color/dark_gray"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/buttonRegistration"
            app:layout_constraintEnd_toEndOf="@+id/buttonRegistration"
            app:layout_constraintStart_toStartOf="@+id/buttonRegistration"
            app:layout_constraintTop_toTopOf="@+id/buttonRegistration" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_background"
            android:fontFamily="@font/roboto_medium"
            android:foreground="?selectableItemBackground"
            android:text="@string/button_back_to_login_label"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegistration" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

