<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/new_note_title">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/light_gray"
            app:tabBackground="@drawable/tab_indicator"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed"
            app:tabSelectedTextAppearance="@style/TabTextAppearance"
            app:tabSelectedTextColor="@color/black"
            app:tabTextAppearance="@style/TabTextAppearance"
            app:tabTextColor="@color/black">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_local" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_community" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp">

            <View
                android:id="@+id/viewDrawable"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:background="@drawable/edit_text_drawable"
                app:layout_constraintBottom_toBottomOf="@id/editTextTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/editTextTitle" />

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@null"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/note_title_hint"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/viewDrawable"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:clipToPadding="false"
            android:paddingHorizontal="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_insetEdge="top">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/dark_gray"
            android:foreground="?selectableItemBackground"
            android:padding="10dp"
            android:src="@drawable/ic_menu_note"
            app:layout_constraintBottom_toBottomOf="@id/textViewSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewSave"
            app:tint="@color/white" />

        <ProgressBar
            android:id="@+id/progressBarInsert"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:indeterminateTint="@color/white"
            android:padding="6dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintEnd_toEndOf="@id/imageButton"
            app:layout_constraintStart_toStartOf="@id/imageButton"
            app:layout_constraintTop_toTopOf="@id/imageButton" />

        <TextView
            android:id="@+id/textViewSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/dark_gray"
            android:fontFamily="@font/roboto_medium"
            android:foreground="?selectableItemBackground"
            android:gravity="center_horizontal"
            android:paddingVertical="12dp"
            android:text="@string/create_note_text"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBarSave"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:indeterminateTint="@color/white"
            android:padding="6dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textViewSave"
            app:layout_constraintEnd_toEndOf="@id/textViewSave"
            app:layout_constraintStart_toStartOf="@id/textViewSave"
            app:layout_constraintTop_toTopOf="@id/textViewSave" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>